--- a/app/Containers/Main/style.css
+++ b/app/Containers/Main/style.css
@@ -1,3 +1,25 @@
+.main {
+  background: url('./1.png') no-repeat center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+  filter: blur(10px);
+  animation: unblur 3s linear forwards;
+}
+@keyframes unblur {
+  to {
+    filter: blur(0);
+  }
+}
+@keyframes blur {
+  to {
+    filter: blur(10px);
+  }
+}
 .aligner {
   display: flex;
   align-items: center;
