--- a/app/Containers/Background/style.css
+++ b/app/Containers/Background/style.css
@@ -1,4 +1,4 @@
-.main {
+.background {
   background: url('./1.png') no-repeat center center;
   width: 100%;
   height: 100%;
@@ -6,7 +6,16 @@
   top: 0;
   left: 0;
   z-index: -1;
-
+}
+.background.activating {
+  filter: blur(10px);
+  animation: unblur 3s linear forwards;
+}
+.background.deactivating {
+  filter: blur(0);
+  animation: blur 3s linear forwards;
+}
+.background.init {
   filter: blur(10px);
   animation: unblur 3s linear forwards;
 }
@@ -19,18 +28,4 @@
   to {
     filter: blur(10px);
   }
-}
-.aligner {
-  display: flex;
-  align-items: center;
-  min-height: 24em;
-  justify-content: center;
-}
-
-.alignerItem {
-  background: #000;
-  color: red;
-  flex: 0.33;
-  align-items: center;
-  justify-content: center;
 }
